# log_reader

./: .gitignore  CMakeLists.txt  README.md  build.sh  create_artificial_logs.py  main.cpp  match_rules.hpp  matcher.hpp
example/: operator_plus.cpp
src/: log_reader.cpp  log_reader.hpp  match_rules.cpp  match_rules.hpp  matcher.cpp  matcher.hpp  rule.hpp  rules.cpp  rules.hpp  state_machine.cpp  state_machine.hpp
tests/: log_reader_tests.cpp  matcher_tests.cpp  test.txt  test2.txt
